kubernetes/services/postgres.yml
# https://www.digitalocean.com/community/tutorials/how-to-deploy-postgres-to-kubernetes-cluster
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: postgres-namespace
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: 'postgres:15.3'
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - mountPath: /var/lib/postgresql/data
                        name: postgresdata
            volumes:
                - name: postgresdata
                  persistentVolumeClaim:
                      claimName: postgres-volume-claim
