kubernetes/services/backend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    namespace: backend-namespace
spec:
    type: LoadBalancer
    selector:
        app: backend
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
