kubernetes/services/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    namespace: frontend-namespace
spec:
    type: LoadBalancer
    selector:
        app: frontend
    ports:
        - protocol: TCP
          port: 5173
          targetPort: 80
