kubernetes/services/postgres-service.yml
# https://www.digitalocean.com/community/tutorials/how-to-deploy-postgres-to-kubernetes-cluster
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: postgres-namespace
    labels:
        app: postgres
spec:
    type: NodePort
    ports:
        - port: 5432
    selector:
        app: postgres
