kubernetes/services/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#     name: frontend-ingress
#     annotations:
#         cert-manager.io/cluster-issuer: 'letsencrypt-prod'
#     namespace: argocd
# spec:
#     rules:
#         - host: leagueoftoken.online
#           http:
#               paths:
#                   - backend:
#                         service:
#                             port:
#                                 number: 443
#                             name: frontend-service
#                     path: /
#                     pathType: Prefix
#     tls:
#         - hosts:
#               - leagueoftoken.online
#           secretName: frontend-ingress-secret
#     ingressClassName: nginx

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: main-ingress
    annotations:
        cert-manager.io/cluster-issuer: 'letsencrypt-staging' # letsencrypt-prod
    namespace: argocd
spec:
    rules:
        - host: frontend.leagueoftoken.online
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 443
        - host: api.leagueoftoken.online
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 3443
    tls:
        - hosts:
              - leagueoftoken.online
              - frontend.leagueoftoken.online
              - api.leagueoftoken.online
          secretName: main-ingress-secret
    ingressClassName: nginx
